src/tests/cases/snapshots/diskonaut__tests__cases__ui__delete_file_no_confirmation-3.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[2]"
---
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                    ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                                      Deleting                                                                       │                   
                    │                                                                                                                                                     │                   
                    │                                               /tmp/diskonaut_tests/delete_file_no_confirmation/file2                                                │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    │                                                                                                                                                     │                   
                    └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                   
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              

